# CrowRestAPI

./: .gitignore  CMakeLists.txt  README.md  build.sh  init.sh
src/: CMakeLists.txt  main.cpp
src/api/: handlers.cpp  handlers.h  routes.cpp  routes.h  validators.cpp  validators.h
src/helpers/: date.cpp  date.h
src/schemes/base/: basefield.cpp  basefield.h  basescheme.h  errorscheme.cpp  errorscheme.h  numberfield.h
src/schemes/custom/: calculatescheme.cpp  calculatescheme.h  customscheme.h
